remove animation from last item

--- a/index.html
+++ b/index.html
@@ -66,10 +66,9 @@
 <section>
     <div class="container">
         <div>
-            <h2 class="sr delay-1">More on GitHub</h2>
-            <p class="sr delay-2">For new releases and further documentation please visit the project's GitHub repo.</p>
-            <p class="sr delay-3"><a href="https://github.com/OhColar/scroleyTrigger" target="_blank" class="btn">View on GitHub</a></p>
-
+            <h2>More on GitHub</h2>
+            <p>For new releases and further documentation please visit the project's GitHub repo.</p>
+            <p><a href="https://github.com/OhColar/scroleyTrigger" target="_blank" class="btn">View on GitHub</a></p>
         </div>
     </div>
 </section>
